selam.css
html {
    height: 100%;
    margin: 0;
  }
  
  p {
    font-family: sans-serif;
    line-height: 1.2;
  }
  
  textarea {
    resize: none;
    font-size: smaller;
  }
  
  #contentContainer {
    margin-right: 10px;
    height: 90%;
  }
  
  #domainSelect{
    margin-bottom: 10px;
  }

  #poleLogo {
    margin-right: 0px;
    width: 100%;
    height: 100%;
    border: none;
  }
  
  #contentPart {
    padding: 20px;
    overflow-y: auto;
  }
  
  #footerButtons {
    padding-right: 20px;
    border-top: solid 1px;
    border-color: rgba(0, 0, 0, 0.679);
  }
  
  #rmvButton {
    float: right;
    width: 40px;
  }
  
  #domainAdd {
    width: 40px;
  }
  
  #pathAddButton {
    width: 40px;
  }
  
#sshLog {
  color: black;
  font-size: smaller;  
  margin-bottom: 10px;
}

  #pathRemoveButton {
    float: right;
    width: 40px;
  }
  
  #logMessage {
    display: none;
  }
  
  #buttonsContainer {
    margin-right: 135px;
    margin-top: 10px;
    margin-bottom: 10px;
  }
  
  #textContainer {
    margin-right: 160px;
  }
  
  body {
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background: white;
    margin: 0;
    height: 100%;
  }
  
  img {
    position: relative;
    max-width: 100%;
    height: auto;
  
  }
  .styledimg {
    display: flex;
  
    width: 190px;
    height: 40px;
    background-repeat: no-repeat;
    border: 1px solid white;
    border-radius: 30%;
    background-color: black;
    z-index: 1;
  }
  .container {
    margin-top: 60%;
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .container .ring {
    position: absolute;
    width: 150px;
    height: 150px;
    border-radius: 50%;
    border: 4px solid transparent;
    border-top: 4px solid cyan;
    border-left: 4px solid cyan;
    animation: animate 8s linear infinite;
    background-color: black;
  
  }
  .container .ring:nth-child(2) {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    border: 3px solid transparent;
    border-top: 4px solid cyan;
    border-left: 4px solid cyan;
    animation: animate2 4s linear infinite;
  }
  @keyframes animate {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
    
  }
  @keyframes animate2 {
    0% {
      transform: rotate(360deg);
    }
    100% {
      transform: rotate(0deg);
    }
    
  }
  .container .ring::before {
    content: "";
    position: absolute;
    top: 15px;
    right: 15px;
    border-radius: 50%;
    width: 10px;
    height: 10px;
    background: cyan;
    box-shadow: 0 0 20px 10px rgb(7, 97, 97);
    z-index: -1;
  }
  .container .ring:nth-child(2)::before {
    content: "";
    position: absolute;
    left: 25px;
    top: 165px;
    border-radius: 50%;
    width: 10px;
    height: 10px;
    background: cyan;
    box-shadow: 0 0 20px 20px rgb(7, 97, 97);
    z-index: -1;
  }
  
  .container p {
    position: absolute;
    color: white;
    font-size: .5em;
    font-family: consolas;
    bottom: -80px;
    letter-spacing: 0.15em;
  }
  
  #leftPart{
    background-color: black;
    z-index: -100;
  }

  #installProgress{
    width: 0%;
    border-radius: 0px;
    height: 20px;
    margin-bottom: 5px;
  }

  #cmdDisplayer{
    line-height: 1;
  }

